--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -11,7 +11,7 @@
 
 .group_bg1 {
   background-image: url(https://i.ibb.co/YdczRp1/hero-2.png);
-  background-position: center;
+  background-position: left;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -20,7 +20,7 @@
 }
 .group_bg2 {
   background-image: url(https://i.ibb.co/D9Ydsgw/hero-3.png);
-  background-position: center;
+  background-position: left;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
